[package]
name = "nucypher-core-python"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
version = "0.14.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18"
nucypher-core = { path = "../nucypher-core" }
umbral-pre = { version = "0.11.0", features = ["bindings-python"] }
ferveo = { package = "ferveo-nucypher", version = "0.4.0", features = ["bindings-python"] }
derive_more = { version = "0.99", default-features = false, features = ["from", "as_ref"] }

[build-dependencies]
pyo3-build-config = "*"
