[package]
name = "nucypher-core-python"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
version = "0.15.1-dev.1"
edition = "2018"

[lib]
name = "_nucypher_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18"
nucypher-core = { path = "../nucypher-core" }
umbral-pre = { version = "0.11.0", features = ["bindings-python"] }
ferveo = { package = "ferveo-nucypher", version = "0.4.0", features = ["bindings-python"] }
derive_more = { version = "0.99", default-features = false, features = ["from", "as_ref"] }
hex = "0.4"
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "*"
