[package]
name = "nucypher-core-python"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
version = "0.15.1-dev.3"
edition = "2018"

[lib]
name = "_nucypher_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["num-bigint"] }
nucypher-core = { path = "../nucypher-core" }
umbral-pre = { version = "0.11.0", features = ["bindings-python"] }
ferveo = { package = "ferveo-nucypher", version = "0.4.0", features = ["bindings-python"] }
derive_more = { version = "0.99", default-features = false, features = ["from", "as_ref"] }
hex = "0.4"
serde_json = "1.0"
num-bigint = "0.4.6"

[build-dependencies]
pyo3-build-config = "*"
