[package]
name = "nucypher-core-wasm"
version = "0.15.1-dev.2"
authors = [
    "Bogdan Opanchuk <bogdan@opanchuk.net>",
    "Piotr Roslaniec <p.roslaniec@gmail.com>"
]
edition = "2021"
license = "GPL-3.0-only"
description = "NuCypher network core data structures"
repository = "https://github.com/nucypher/nucypher-core/tree/main/nucypher-core-wasm"
readme = "README.md"
categories = ["cryptography", "no-std"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
umbral-pre = { version = "0.11.0", features = ["bindings-wasm"] }
ferveo = { package = "ferveo-nucypher", version = "0.4.0", features = ["bindings-wasm"] }
ark-std = "0.4"
nucypher-core = { path = "../nucypher-core" }
wasm-bindgen = "0.2.100"
js-sys = "0.3.63"
console_error_panic_hook = { version = "0.1", optional = true }
derive_more = { version = "0.99", default-features = false, features = ["from", "as_ref"] }
wasm-bindgen-derive = "0.2.1"
x25519-dalek = "2.0.0-rc.2"

[dev-dependencies]
console_error_panic_hook = "0.1"
hex = "0.4.3"
wasm-bindgen-test = "0.3.36"
