[package]
name = "nucypher-core"
version = "0.8.0"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
edition = "2021"
license = "GPL-3.0-only"
description = "Nucypher network core datastructures"
repository = "https://github.com/nucypher/nucypher-core/tree/main/nucypher-core"
readme = "README.md"
categories = ["cryptography", "no-std"]

[dependencies]
# TODO: Replace with a new release after this PR is merged and released: https://github.com/nucypher/rust-umbral/pull/122
umbral-pre = { git = "https://github.com/piotr-roslaniec/rust-umbral.git", rev = "fef199365a82d56b8cb8af808218198bd7bf7e4f", features = ["serde"] }
ferveo = { package = "ferveo-pre-release", git = "https://github.com/nucypher/ferveo.git", rev = "9795e2969f525fc7ee3a7721dca368287f4825c8" }
serde = { version = "1", default-features = false, features = ["derive"] }
generic-array = "0.14"
sha3 = "0.10"
rmp-serde = "1"
serde_with = "1.14"
hex = "0.4"
