[package]
name = "nucypher-core"
version = "0.15.1-dev.3"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
edition = "2021"
license = "GPL-3.0-only"
description = "Nucypher network core datastructures"
repository = "https://github.com/nucypher/nucypher-core/tree/main/nucypher-core"
readme = "README.md"
categories = ["cryptography", "no-std"]

[dependencies]
umbral-pre = { version = "0.11.0", features = ["serde"] }
ferveo = { package = "ferveo-nucypher", version = "0.4.0" }
ark-std = "0.4"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1" }
generic-array = { version = "0.14", features = ["zeroize"] }
sha3 = "0.10"
rmp-serde = "1"
serde_with = "1.14"
hex = "0.4"
hkdf = "0.12.3"
sha2 = "0.10.6"
x25519-dalek = { version = "2.0.0-rc.2", features = ["serde", "static_secrets"] }
chacha20poly1305 = "0.10.1"
zeroize = { version = "1.6.0", features = ["derive"] }
rand_core = "0.6.4"
rand_chacha = "0.3.1"
rand = "0.8.5"
ethers = "2.0.14"
primitive-types = { version = "0.14.0", features = ["serde"] }
